# RustKernel

./: .gitignore  Cargo.toml  dbg.gdb  load-symbols.py  out.asm  qemu.nu  virtbox.txt
.cargo/: config.toml
boot_image_generator/: Cargo.toml
boot_image_generator/src/: lib.rs  main.rs
disk_image_generator/: Cargo.toml
disk_image_generator/src/: main.rs
disk_image_generator/src/iso/: directory_entry.rs  mod.rs  option.rs  volume_descriptor.rs
drivers-c/c_driver/: Makefile  a.out  compile.nu  driver  driver.c
drivers/file_system/: Cargo.toml
drivers/file_system/.cargo/: config.toml
drivers/file_system/src/: lib.rs  main.rs
drivers/pci/: Cargo.toml
drivers/pci/.cargo/: config.toml
drivers/pci/src/: lib.rs
kernel/: Cargo.toml  kernel_target.json  link.x
kernel/.cargo/: config.toml
kernel/src/: allocator.rs  efi.rs  elf.rs  gdt.rs  interrupts.rs  linked_list_allocator.rs  main.rs  mem.rs  process_manager.rs  processes.rs  syscall.rs  util.rs
kernel/src/drivers/: device.rs  keyboard.rs  mod.rs  pci.rs  serial.rs
kernel/src/macros/: Cargo.toml
kernel/src/macros/src/: lib.rs
kernel_api/common/: Cargo.toml
kernel_api/common/.cargo/: config.toml
kernel_api/common/src/: allocator.rs  efi.rs  elf.rs  kernel_process.rs  lib.rs  linked_list_allocator.rs  mem.rs  memory_regions.rs  process.rs  util.rs
kernel_api/driver/: Cargo.toml
kernel_api/driver/src/: lib.rs
kernel_api/driver_proc_macro/: Cargo.toml
kernel_api/driver_proc_macro/src/: lib.rs
kernel_api/macros/: Cargo.toml
kernel_api/macros/src/: lib.rs
kernel_loader/: Cargo.toml
kernel_loader/.cargo/: config.toml
kernel_loader/src/: efi.rs  main.rs
misc/: dbg.gdb  dbg_vs.gdb  dbginterp.js  debug.bat  lindsdt.dsl  out.txt  qemu.nu  qemudbg.nu  qemudevs.txt  qemudsdt3.dsl  winDSDT2.dsl
misc/ovmf-x64/: OVMF-need-smm.fd  OVMF_CODE-with-csm.fd
ovmf-x64/: OVMF-pure-efi.fd  OVMF-with-csm.fd  OVMF_CODE-need-smm.fd  OVMF_CODE-pure-efi.fd  UefiShell.iso
src/: allocator.rs  efi.rs  gdt.rs  interrupts.rs  linked_list_allocator.rs  main.rs  mem.rs  processes.rs  util.rs
src/acpi/: aml.rs  fadt.rs  madt.rs  mcfg.rs  mod.rs  types.rs  xsdt.rs
src/drivers/: device.rs  keyboard.rs  mod.rs  pci.rs  pic.rs
src/macros/: Cargo.toml
src/macros/src/: lib.rs
