[package]
name = "boot_image_generator"
version = "0.1.0"
authors = ["Oliver Clarke <oliverhenryc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "boot_fs"
path = "src/lib.rs"

[[bin]]
name = "generator"
path = "src/main.rs"

[dependencies]
