[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# [lib]
# crate-type = ["staticlib"]
# path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
spin = {version="0.9.2", default-features=false, features=["mutex", "spin_mutex"]}
macros = {path="../kernel_api/macros"}
bit_field= "*"
bitflags = "1.3.2"
aml = {path="../../../acpi/aml"}
boot_image_generator = { path = "../boot_image_generator" }
common = {path = "../kernel_api/common", features = ["kernel"]}


[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]