[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macros = {path = "../macros"}
x86_64 = "*"
lazy_static = {version = "1.4.0", features=["spin_no_std"]}
linked_list_allocator = {path = "../../../../Libraries/linked-list-allocator"}
spinning_top = {path = "../../../../Libraries/spinning_top"}
boot_image_generator = { path = "../../boot_image_generator" }

[features]
kernel = []
bootloader = []